--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -24,12 +24,15 @@
                 </Grid.RowDefinitions>
 
                 <Grid ClipToBounds="True" x:Name="MediaGrid" Grid.Row="0" Margin="15" HorizontalAlignment="Left">
-                    <Border ClipToBounds="True" x:Name="MediaEl" CornerRadius="20" Height="{Binding Path=ActualHeight,ElementName=window,Converter={StaticResource ScreenRatioHeightConvert}}" Width="{Binding Path=ActualHeight,ElementName=window, Converter={StaticResource ScreenRatioConverter}}" BorderBrush="#414141" BorderThickness="2">
+                    <Border ClipToBounds="True" x:Name="MediaEl" CornerRadius="20" 
+                            Height="{Binding Path=ActualHeight,ElementName=window,Converter={StaticResource ScreenRatioHeightConvert}}" 
+                            Width="{Binding Path=ActualHeight,ElementName=window, Converter={StaticResource ScreenRatioConverter}}" >
                         <Grid ClipToBounds="True">
 
                             <ContentControl Content="{Binding Player}">
                                 <ContentControl.Clip>
-                                    <RectangleGeometry RadiusX="20" RadiusY="20" Rect="{Binding Path=ActualHeight, ElementName=window, Converter={StaticResource ContentControlConverter}}"></RectangleGeometry>
+                                    <RectangleGeometry RadiusX="20" RadiusY="20" 
+                                                       Rect="{Binding Path=ActualHeight, ElementName=window, Converter={StaticResource ContentControlConverter}}"></RectangleGeometry>
                                 </ContentControl.Clip>
                             </ContentControl>
                            
@@ -40,7 +43,7 @@
                                         <ImageBrush ImageSource="/Resources/Icons/pause.png"/>
                                     </Button.Background>
                                 </Button>
-                                <Grid VerticalAlignment="Bottom" Margin="20 0">
+                                <Grid VerticalAlignment="Bottom" Margin="20 0 20 20">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="auto"></ColumnDefinition>
                                         <ColumnDefinition Width="*"></ColumnDefinition>
@@ -64,7 +67,7 @@
                                             </Button.Background>
                                         </Button>
                                     </StackPanel>
-                                    <Slider Grid.Column="1" Margin="20 0"></Slider>
+                                    <Slider Style="{DynamicResource Slider_CustomStyle}" Height="5" Grid.Column="1" Margin="20 0"></Slider>
                                     <StackPanel Orientation="Horizontal" Grid.Column="2">
                                         <Button Height="25" Width="25" Margin="0 0 20 0">
                                             <Button.Background>
@@ -92,47 +95,28 @@
                             Grid.Row="1" Margin="15 0 15 0" HorizontalAlignment="Left">
                     <StackPanel Margin="20">
                         <TextBlock Foreground="White" FontSize="24">Название</TextBlock>
-                        <TextBlock Foreground="White">Информация</TextBlock>
-                        <TextBlock Foreground="White" FontSize="24"> Название</TextBlock>
-                        <TextBlock Foreground="White">Информация</TextBlock>
-                        <TextBlock Foreground="White" FontSize="24">Название</TextBlock>
-                        <TextBlock Foreground="White">Информация</TextBlock>
-                        <TextBlock Foreground="White" FontSize="24">Название</TextBlock>
-                        <TextBlock Foreground="White">Информация</TextBlock>
-                        <TextBlock Foreground="White" FontSize="24">Название</TextBlock>
-                        <TextBlock Foreground="White">Информация</TextBlock>
-                        <TextBlock Foreground="White" FontSize="24">Название</TextBlock>
-                        <TextBlock Foreground="White">Информация</TextBlock>
-                        <TextBlock Foreground="White" FontSize="24">Название</TextBlock>
-                        <TextBlock Foreground="White">Информация</TextBlock>
-                        <TextBlock Foreground="White" FontSize="24">Название</TextBlock>
-                        <TextBlock Foreground="White">Информация</TextBlock>
-                        <TextBlock Foreground="White" FontSize="24">Название</TextBlock>
-                        <TextBlock Foreground="White">Информация</TextBlock>
-                        <TextBlock Foreground="White" FontSize="24">Название</TextBlock>
-                        <TextBlock Foreground="White">Информация</TextBlock>
+                        <TextBlock Foreground="White">Описание</TextBlock>
                     </StackPanel>
                 </Border>
             </Grid>
         </ScrollViewer>
         <Grid Style="{DynamicResource RightPanel}" Grid.Column="1" Width="270" HorizontalAlignment="Right">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+            </Grid.RowDefinitions>
             <StackPanel>
                 <TextBlock Foreground="White" HorizontalAlignment="Center" Margin="0 20 0 0">Очередь</TextBlock>
                 <Grid Background="White" Height="0.5" Margin="20 0"></Grid>
-                <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" Margin="0 20 0 0">
-                    <ListView Margin="10 10 10 0" ItemsSource="{Binding Medias}"
-                              HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
-                        <ListView.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <UniformGrid Columns="1" VerticalAlignment="Top" HorizontalAlignment="Stretch">
-
-                                </UniformGrid>
-                            </ItemsPanelTemplate>
-                        </ListView.ItemsPanel>
-                    </ListView>
-                </ScrollViewer>
+                <ListView Margin="10 30 10 0" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <UniformGrid Columns="1" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                </ListView>
             </StackPanel>
-            <Grid x:Name="buttons" Style="{DynamicResource BottomPanel}" VerticalAlignment="Bottom">
+            <Grid Grid.Row="1" x:Name="buttons" Style="{DynamicResource BottomPanel}" VerticalAlignment="Bottom">
                 <StackPanel HorizontalAlignment="Center" Width="{Binding ActualWidth, ElementName=buttons}" >
                     <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" Command="{Binding Back}" 
                             Content="История" Margin="40 20"/>
