--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -25,24 +25,21 @@
                 
 
                 <Grid ClipToBounds="True" x:Name="MediaGrid" Grid.Row="0" Margin="15" HorizontalAlignment="Left">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseMove">
+                            <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                     <Border ClipToBounds="True" x:Name="MediaEl" CornerRadius="20" 
                             Height="{Binding Path=ActualHeight,ElementName=window,Converter={StaticResource ScreenRatioHeightConvert}}" 
                             Width="{Binding Path=ActualHeight,ElementName=window, Converter={StaticResource ScreenRatioConverter}}" >
                         <Grid ClipToBounds="True">
-                            
-
-                            <ContentControl Content="{Binding Player}">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="MouseMove">
-                                        <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
+                            <ContentControl Content="{Binding Player, Mode=TwoWay}">
                                 <ContentControl.Clip>
                                     <RectangleGeometry RadiusX="20" RadiusY="20" 
                                                        Rect="{Binding Path=ActualHeight, ElementName=window, Converter={StaticResource ContentControlConverter}}"></RectangleGeometry>
                                 </ContentControl.Clip>
                             </ContentControl>
-
 
                             <Grid Visibility="{Binding InterfaceVisible}">
                                 <Button Height="25" Width="25" Command="{Binding PlayVideoCommand}">
@@ -75,7 +72,8 @@
                                         </Button>
                                     </StackPanel>
                                     <TextBlock Grid.Column="1" Margin="0 0 0 30" Text="{Binding DurText}" FontWeight="Bold" FontFamily="{StaticResource Font}" HorizontalAlignment="Center"></TextBlock>
-                                    <Slider Maximum="{Binding MaxDur}" Style="{DynamicResource Slider_CustomStyle}" Value="{Binding MediaDur}" Height="5" Grid.Column="1" Margin="20 0"></Slider>
+                                    <Slider Maximum="{Binding Duration}" Style="{DynamicResource Slider_CustomStyle}" Value="{Binding Position}" Height="5" Grid.Column="1" Margin="20 0"></Slider>
+
                                     <StackPanel Orientation="Horizontal" Grid.Column="2">
                                         <Button Height="25" Width="25" Margin="0 0 20 0">
                                             <Button.Background>
