--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -6,6 +6,7 @@
       xmlns:local="clr-namespace:Melista.Views"
       xmlns:viewmodels="clr-namespace:Melista.ViewModels" xmlns:local1="clr-namespace:Melista" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       DataContext="{Binding MediaPageViewModel, Source={StaticResource ViewModelLocator}}"
+      xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="900"
       Title="MediaPage" x:Name="window">
@@ -28,7 +29,7 @@
                     <Border ClipToBounds="True" x:Name="MediaEl" CornerRadius="20"  Background="Black"
                             Height="{Binding Path=ActualHeight,ElementName=window,Converter={StaticResource ScreenRatioHeightConvert}}" 
                             Width="{Binding Path=ActualHeight,ElementName=window, Converter={StaticResource ScreenRatioConverter}}" >
-                        <Grid ClipToBounds="True">
+                        <Grid x:Name="Video2" ClipToBounds="True">
 
 
 
@@ -45,21 +46,47 @@
                                 </ContentControl.Clip>
                             </ContentControl>
 
-
                             <Grid Visibility="{Binding InterfaceVisible}">
+
+                                <Border VerticalAlignment="Bottom" Height="{Binding Path=ActualHeight, ElementName=aboba}" CornerRadius="20">
+                                    <controls:BlurryUserControl
+                                    Background="Transparent"
+                                    BlurContainer="{Binding ElementName=Video}"
+                                    BlurRadius="45"
+                                    Magnification="0.25">
+                                        <controls:BlurryUserControl.Clip>
+                                            <RectangleGeometry RadiusX="20" RadiusY="20" 
+                                                           Rect="{Binding Path=ActualHeight, ElementName=window, Converter={StaticResource BlurPanelConverter}}"></RectangleGeometry>
+                                        </controls:BlurryUserControl.Clip>
+                                    </controls:BlurryUserControl>
+                                </Border>
+
+                                <Border HorizontalAlignment="Center" Height="100" Width="100">
+                                    <controls:BlurryUserControl
+                                    Background="Transparent"
+                                    BlurContainer="{Binding ElementName=Video}"
+                                    BlurRadius="45"
+                                    Magnification="0.25">
+                                        <controls:BlurryUserControl.Clip>
+                                            <RectangleGeometry RadiusX="100" RadiusY="100" 
+                                                           Rect="0 0 100 100"></RectangleGeometry>
+                                        </controls:BlurryUserControl.Clip>
+                                    </controls:BlurryUserControl>
+                                </Border>
+
                                 <Button Height="25" Width="25" Command="{Binding PlayVideoCommand}">
                                     <Button.Background>
                                         <ImageBrush ImageSource="/Resources/Icons/pause.png"/>
                                     </Button.Background>
                                 </Button>
-                                <Grid VerticalAlignment="Bottom" Margin="20 0 20 20">
+                                <Grid VerticalAlignment="Bottom" Margin="20 0 20 0" x:Name="aboba">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="auto"></ColumnDefinition>
                                         <ColumnDefinition Width="*"></ColumnDefinition>
                                         <ColumnDefinition Width="auto"></ColumnDefinition>
                                     </Grid.ColumnDefinitions>
 
-                                    <StackPanel Orientation="Horizontal" Grid.Column="0">
+                                    <StackPanel Orientation="Horizontal" Grid.Column="0" Margin="0 20 0 20">
                                         <Button Height="25" Width="25" Margin="0 0 20 0" Command="{Binding Rewind}">
                                             <Button.Background>
                                                 <ImageBrush ImageSource="/Resources/Icons/previous.png"/>
@@ -80,9 +107,9 @@
                                     </StackPanel>
 
 
-                                    <Slider Maximum="{Binding MaxDur}" Style="{DynamicResource Slider_CustomStyle}" Value="{Binding MediaDur}" Height="5" Grid.Column="1" Margin="10 0"></Slider>
+                                    <Slider Maximum="{Binding MaxDur}" Style="{DynamicResource Slider_CustomStyle}" Value="{Binding MediaDur}" Height="5" Grid.Column="1" Margin="10 20 0 20"></Slider>
 
-                                    <StackPanel Orientation="Horizontal" Grid.Column="2">
+                                    <StackPanel Orientation="Horizontal" Grid.Column="2" Margin="0 20 0 20">
                                         <!--И вот тут-->
                                         <TextBlock Margin="10 0" VerticalAlignment="Center" Text="{Binding DurText2}" FontWeight="Bold" FontFamily="{StaticResource Font}" Foreground="{DynamicResource PrimaryForegroundBrush}"></TextBlock>
                                         <Button Height="25" Width="25" Margin="0 0 20 0">
