--- a/Styles/LightTheme.xaml
+++ b/Styles/LightTheme.xaml
@@ -384,7 +384,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Grid x:Name="GridBg" Background="Transparent">
-                        <Border>
+                        <Border Height="18">
                             <Border.Background>
                                 <ImageBrush ImageSource="/Resources/Dark/close.png" Stretch="Uniform"/>
                             </Border.Background>
@@ -406,7 +406,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Grid x:Name="GridBg" Background="Transparent">
-                        <Border>
+                        <Border Height="18">
                             <Border.Background>
                                 <ImageBrush ImageSource="/Resources/Dark/minimize.png" Stretch="Uniform"/>
                             </Border.Background>
@@ -428,7 +428,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Grid x:Name="GridBg" Background="Transparent">
-                        <Border>
+                        <Border Height="18">
                             <Border.Background>
                                 <ImageBrush ImageSource="/Resources/Dark/rollup.png" Stretch="Uniform"/>
                             </Border.Background>
